rust/kcl-lib/tests/consumed_solid_subtract_reuse_target/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing consumed_solid_subtract_reuse_target.kcl
---
KCL Semantic error

  × semantic: `target` was already consumed by a `subtract` operation. The
  │ operation result is now in `first`; use that for subsequent operations.
    ╭─[44:10]
 43 │ first = subtract(target, tools = [tool1])
 44 │ second = subtract(target, tools = [tool2])
    ·          ────────────────┬────────────────┬
    ·                          │                ╰── tests/consumed_solid_subtract_reuse_target/input.kcl
    ·                          ╰── tests/consumed_solid_subtract_reuse_target/input.kcl
    ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: `target` was already consumed by a `subtract` operation.
        │ The operation result is now in `first`; use that for subsequent
        │ operations.
          ╭─[44:19]
       43 │ first = subtract(target, tools = [tool1])
       44 │ second = subtract(target, tools = [tool2])
          ·                   ───┬──
          ·                      ╰── tests/
      consumed_solid_subtract_reuse_target/input.kcl
          ╰────
